--- a/BibFile.bib
+++ b/BibFile.bib
@@ -915,3 +915,31 @@
 	pages = {301--310},
 	file = {Simulation Analyses Testing the Robustness of Productivity Determinations from West Coast Pacific Ocean Perch Stock Assessment Data.pdf:C\:\\Users\\Chantel.Wetzel\\AppData\\Roaming\\Zotero\\Zotero\\Profiles\\0u2lkieq.default\\zotero\\storage\\BSRPGJDP\\Simulation Analyses Testing the Robustness of Productivity Determinations from West Coast Pacific Ocean Perch Stock Assessment Data.pdf:application/pdf}
 }
+
+@techreport{gertseva_status_2015,
+	title = {Status of the darkblotched rockfish resource off the continental {U}.{S}. {Pacific} {Coast} in 2015},
+	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
+	author = {Gertseva, Vladlena and Matson, Sean and Councill, Elizabeth},
+	year = {2015}
+}
+
+@techreport{hicks_status_2009,
+	title = {Status of greenstriped rockfish ({Sebastes} elongatus) along the outer coast of {California}, {Oregon}, and {Washington}},
+	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
+	author = {Hicks, Allan C. and Haltuch, M. A. and Wetzel, C. R.},
+	year = {2009}
+}
+
+@techreport{field_status_2007,
+	title = {Status of the {Chilipepper} rockfish, {Sebastes} goodei, in 2007},
+	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
+	author = {Field, John C.},
+	year = {2007}
+}
+
+@techreport{hicks_status_2015,
+	title = {The status of {Widow} {Rockfish} ({Sebastes} entomelas) along the {U}.{S}. west coast in 2015},
+	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
+	author = {Hicks, A. C. and Wetzel, C. R.},
+	year = {2015}
+}
