--- a/3_Assessment.Rmd
+++ b/3_Assessment.Rmd
@@ -130,7 +130,7 @@ Proper convergence was determined by starting the minimization process from disp
 <!-- ************************************************************************* -->
 ##Base Model Results
 
-The base model parameter estimates along with approximate asymptotic standard errors are shown in Table \ref{tab:model_params} and the likelihood components are shown in Table \ref{tab:like}. Time-series of estimated stock size over time are shown in Table \ref{tab:Timeseries_mdo1}. Estimates of key derived parameters and approximate 95% asymptotic confidence intervals are shown in Table \ref{tab:Ref_pts}.
+The base model parameter estimates along with approximate asymptotic standard errors are shown in Table \ref{tab:model_params} and the likelihood components are shown in Table \ref{tab:like}. Time-series of estimated stock size over time are shown in Table \ref{tab:Timeseries_mod1}. Estimates of key derived parameters and approximate 95% asymptotic confidence intervals are shown in Table \ref{tab:Ref_pts}.
 
 ###Parameter Estimates
 The estimates of maximum length and the von Bertanlaffy growth coefficient, $k$, were less than the the external estimates for males and females (Figure \ref{fig:Len_Age}, but were well within the 95% confidence interval given the estimated uncertainty (Table \ref{tab:model_params} and Figure \ref{fig:sizeatage}).  Female and male `r spp` grow quickly at younger ages, reaching near maximimum length by age 20 with female `r spp` having a larger maximum length. 
@@ -150,9 +150,24 @@ The fits the fishery CPUE and five survey indices are shown in Figure \ref{fig:i
 
 Fits to the total observed discard amounts required time blocks (Figure \ref{fig:discard_fits}).  Fits to the trawl discards from the Pikitch data in 1985-1987 were quite good.  Discard rate change modeled over the 1992 - 2001 was based on management restrictions which were assumed to have increased discarding practices in the fishery fleet.  The next required time block was based on the WCGOP data from 2002-2007 and were fit well by the model.  Discarding increased prior to the implementation to ITQs requiring blocks for 2008 and the 2009-2010 periods.  The model fit the very low post-ITQ discard rates based on the WCGOP data well.   
 
-Fits to the length data are shown based on the proportions of lengths observed by year and the Pearson residuals-at-length for all fleets.  Discard lengths from the Pikitch data (1986) and the WCGOP were fit well by the model and show no obvious pattern in the residuals (Figures \ref{fig:_mod1_comp_lenfit_flt1mkt} and \ref{fig:mod1_2_comp_lenfit_residsflt1mkt1}).
+Fits to the length data are shown based on the proportions of lengths observed by year and the Pearson residuals-at-length for all fleets.  Aggregate fits by fleet are shown in Figure \ref{fig:length_agg}.  There are a few things that stand out when examining the aggregated length composition data. First, the sexed discard lengths appear to be poorly fit by the model but this is related to small sample sizes.  The NWFS slope survey lengths were under estimated by the model, but these data are over only two years.  Finally, both the Triennial and the NWFSC shelf-slope surveys select both young and old fish in contrast to the other data sources where larger fish were observed. 
+
+Discard lengths from the Pikitch data (1986) and the WCGOP were fit well by the model and show no obvious pattern in the residuals (Figure \ref{fig:discard_len_pearson}).  The residuals to the fishery lengths clearly showed the growth differential between males and females where the majority of residuals at larger sizes were from female fish (Figure \ref{fig:fishery_len_pearson}).  The fishery showed large positive residuals for smaller fish for 2013-2016 which are attributed to the strong 2008 year class moving through the fishery.  The At-sea hake fishery did not show an obvious pattern in residuals but clearly showed the selectivity of the fishery for larger fish (\ref{fig:ashop_len_pearson}).  The residuals for each of the surveys are shown in Figures \ref{fig:pop_len_pearson}, \ref{fig:tri_len_pearson}, \ref{fig:afsc_len_pearson}, \ref{fig:nwfsc_len_pearson}, and  \ref{fig:nwfsc_combo_len_pearson}. The Pearson residuals from the NWFSC shelf-slope survey clearly showed the strong year classes moving through the population. 
+
+The model was weighted according the Francis weighting which adjust the weight given to a data set based on the fit to the mean lengths by year.  The mean lengths and the estimated model fits are shown in Figures \ref{fig:weighting_len_fishery},  \ref{fig:weighting_len_ashop},  \ref{fig:weighting_len_pop},  \ref{fig:weighting_len_triennial},  \ref{fig:weighting_len_afsc},  \ref{fig:weighting_len_nwfsc},  and \ref{fig:weighting_len_nwfsccombo}.  The mean lengths from the fishery were consistent across the sampled period (Figure \ref{fig:weighting_fishery}), showing only a decline in the mean length in 2013-2015 likely due to the large 2008 cohort.  The At-sea hake fishery showed and increase in the mean length of fish observed to 2009 and then fluctuated at larger lengths (Figure \ref{fig:weighting_ashop}).  The mean length for the NWFSC shelf-slope survey declined in 2012 and 2016 due to a large observation of young small fish by the survey (Figure \ref{fig:weighting_nwfsccombo}).
+
+AGE DATA FITS
+
+COND AGE DATA FITS
+
+MEAN AGE DATA FITS
 
 ###Population trajectory
+The predicted spawning outupt (in millions of eggs) is given in Table \ref{tab:Timeseries_mod1} and plotted in Figure \ref{fig:ssb}. The predicted spawning output from the base model generally showed a slight decline over the time series until  when the foreign fleet began. A short, but sharp decline occurred during the period of the foreign fishery in the late 1960s. The stock continued to decline until 2000 when a combination of strong recruitment and low catches resulted in an increase at the end of the time series. The recent increase is even faster for total biomass (Figure \ref{fig:total_bio}) because not all fish from the 2008 recruitment are mature (Figure \ref{fig:mat_compare}). The `r LastYR` spawning biomass relative to unfished equilibrium spawning biomass is above the target of 40% of unfished spawning biomass (`r Depl_mod1`), with a low of `r low.dep.value` in `r low.ssb` (Figure \ref{fig:depl}). Approximate confidence intervals based on the asymptotic variance estimates show that the uncertainty in the estimated spawning biomass is high, especially in the early years. The standard deviation of the log of the spawning biomass in `r LastYR` is \hl{0.18}.
+
+Recruitment deviations were estimated for the entire time series that was modeled (Figure \ref{fig:recruits} and discussed in Section \ref{parameter-estimates}) and provide a more realistic portrayal of uncertainty. Recruitment predictions from the mid-1970s and early 1980s were mostly below average, with the 1999, 2000, 2008, and 2013 cohorts being the strongest over the modeled period. Many other stock assessments of rockfish along the west coast of the US have estimated a large recruitment event in 1999 (e.g., greenstriped rockfish (@hicks_status_2009]) chilipepper rockfish [@field_status_2007], darkblotched rockfish [@gertseva_status_2015]). The 2008 year classes was estimated as the strongest year class. This year has been estimated to have very strong year classes for other West Coast stocks (e.g  darkblotched rockfish [@gertseva_status_2015], widow rockfish [@hicks_status_2015]). It may be worthwhile to investigate the periods of strong and weak year classes further to see if it is an artifact of the data, a consistent autocorrelation, or a result of the environment.
+
+The stock-recruit curve resulting from a fixed value of steepness is shown in Figure \ref{fig:stock_recruit_curve} with estimated recruitments also shown. The stock is predicted to have never fallen to low enough levels that the steepness is obvious. However, the lowest levels of predicted spawning biomass showed some of the smallest recruitments and very few above average recruitments. Steepness was not estimated in this model, but sensitivities to alternative values of steepness are discussed below.
 
 ###Uncertainty and Sensitivity Analyses
 A number of sensitivity analyses were conducted, including:
