--- a/BibFile.bib
+++ b/BibFile.bib
@@ -102,7 +102,7 @@
 }
 
 @article{francis_use_1992,
-	title = {Use of {Risk} {Analysis} to {Assess} {Fishery} {Management} {Strategies}: {A} {Case} {Study} using {Orange} {Roughy} ({Hoplostethus} atlanticus) on the {Chatham} {Rise}, {New} {Zealand}},
+	title = {Use of {Risk} {Analysis} to {Assess} {Fishery} {Management} {Strategies}: {A} {Case} {Study} using {Orange} {Roughy} (\textit{{Hoplostethus} atlanticus}) on the {Chatham} {Rise}, {New} {Zealand}},
 	volume = {49},
 	issn = {0706-652X},
 	shorttitle = {Use of {Risk} {Analysis} to {Assess} {Fishery} {Management} {Strategies}},
@@ -573,7 +573,7 @@
 }
 
 @article{withler_co-existing_2001,
-	title = {Co-existing populations of {Pacific} ocean perch, {Sebastes} alutus , in {Queen} {Charlotte} {Sound}, {British} {Columbia}},
+	title = {Co-existing populations of {Pacific} ocean perch, \textit{{Sebastes} alutus} , in {Queen} {Charlotte} {Sound}, {British} {Columbia}},
 	volume = {139},
 	issn = {0025-3162, 1432-1793},
 	url = {http://link.springer.com/10.1007/s002270100560},
@@ -653,7 +653,7 @@
 }
 
 @article{van_doornik_multiple_2008,
-	title = {Multiple paternity is prevalent in {Pacific} ocean perch ({Sebastes} alutus) off the {Oregon} coast, and is correlated with female size and age},
+	title = {Multiple paternity is prevalent in {Pacific} ocean perch (\textit{{Sebastes} alutus}) off the {Oregon} coast, and is correlated with female size and age},
 	volume = {83},
 	issn = {0378-1909, 1573-5133},
 	url = {http://link.springer.com/10.1007/s10641-008-9331-0},
@@ -721,7 +721,7 @@
 }
 
 @article{kamin_interannual_2014,
-	title = {Interannual and spatial variation in the population genetic composition of young-of-the-year {Pacific} ocean perch ({Sebastes} alutus) in the {Gulf} of {Alaska}},
+	title = {Interannual and spatial variation in the population genetic composition of young-of-the-year {Pacific} ocean perch (\textit{{Sebastes} alutus}) in the {Gulf} of {Alaska}},
 	volume = {23},
 	issn = {1365-2419},
 	url = {http://onlinelibrary.wiley.com/doi/10.1111/fog.12038/abstract},
@@ -924,21 +924,21 @@
 }
 
 @techreport{hicks_status_2009,
-	title = {Status of greenstriped rockfish ({Sebastes} elongatus) along the outer coast of {California}, {Oregon}, and {Washington}},
+	title = {Status of greenstriped rockfish (\textit{{Sebastes} elongatus}) along the outer coast of {California}, {Oregon}, and {Washington}},
 	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
 	author = {Hicks, Allan C. and Haltuch, M. A. and Wetzel, C. R.},
 	year = {2009}
 }
 
 @techreport{field_status_2007,
-	title = {Status of the {Chilipepper} rockfish, {Sebastes} goodei, in 2007},
+	title = {Status of the {Chilipepper} rockfish, \textit{{Sebastes} goodei}, in 2007},
 	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
 	author = {Field, John C.},
 	year = {2007}
 }
 
 @techreport{hicks_status_2015,
-	title = {The status of {Widow} {Rockfish} ({Sebastes} entomelas) along the {U}.{S}. west coast in 2015},
+	title = {The status of {Widow} {Rockfish} (\textit{{Sebastes} entomelas}) along the {U}.{S}. west coast in 2015},
 	institution = {Pacific Fishery Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR 97220},
 	author = {Hicks, A. C. and Wetzel, C. R.},
 	year = {2015}
